# MICe-lab

./: .gitignore  MIP FIRST.ipynb  Makefile.am  NEWS  README.md  autogen.sh  configure.ac  run_TIFF_to_MINC_conversion.sh  setup.py
R/: EmbryoAnalysis_for_MBM_Pydpiper.R
TV/: CCimages.c  CGskel.c  CGsum.c  CGvesselfilter.py  TV_stitch.py  TV_stitch_matlabtiles.py  Zstack_icorr.py  cvAvgImages.cpp  cvFilter.cpp  dither_kluge.py  dither_pixel_rows.py  image_overlay.c  intensity_temp.py
config/: cluster.json
misc/: FindNuclei.cppipe
perl/: Makefile.am  cryo_coil_distortion_correction_may_2016.pl  distortion_correction_september_2014.pl  saddle_coil_distortion_correction_august_2015.pl
python/: Snakefile  TV_stitch.py  Zstack_icorr.py  calculate_determinant_of_linear_xfm_file.py  convert_CT_image.py  crop_to_brain.py  setup.py
python/mri_python/: bruker_read_file.py  coil_decouple.py  cyltable_gen.py  flash_cyl_MICe.py  fse3dmice_recon.py  ge3dmice_sg_cylA.py  mnc_output.py  mri_recon.py  petable_combine.py  petable_display.py  recon_genfunctions.py  resp_sg.py  seq_default.py  varian_fid_corrections.py  varian_read_file.py
python/saddle_recon/: reconstruction.py  saddle_recon.py
python/saddle_reconstruction/: arguments.py  saddle_reconstruct.py
python/saddre/: arguments.py  saddle_recon.py
python/tissue_vision/: MIP_first.py  TV_pipeline.py  TV_recon.py  TV_stitch.py  Zstack_icorr.py  arguments.py  cellprofiler.sh  reconstruction.py  stacks_to_volume.py  tifstackMIP.py
python/tissvis/: TV_stitch.py  Zstack_icorr.py  arguments.py  cellprofiler.py  reconstruction.py  slice_stack.py  stacks_to_volume.py  tissue_vision.py
singularity/: CellProfiler-3.1.0.def  CellProfiler-3.1.5.def  CellProfiler-3.1.6.def
src/: CCimages.cpp  CGcount.c  CGskeletonlength.c  Makefile.am  cvAvgImages.cpp  cvCorrTiles.cpp  cvFilter.cpp  cvMerge.cpp  cvRectCrop.cpp  image_overlay.cpp
