bin_PROGRAMS = CCimages cvRectCrop cvFilter cvMerge cvCorrTiles cvAvgImages image_overlay 

CCimages_SOURCES = CCimages.cpp
cvRectCrop_SOURCES = cvRectCrop.cpp
cvFilter_SOURCES = cvFilter.cpp
cvMerge_SOURCES = cvMerge.cpp
cvCorrTiles_SOURCES = cvCorrTiles.cpp
cvAvgImages_SOURCES = cvAvgImages.cpp
image_overlay_SOURCES = image_overlay.cpp
